--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:offline": "powershell -ExecutionPolicy Bypass -File ./build-offline.ps1",
     "build:offline:release": "powershell -ExecutionPolicy Bypass -File ./build-offline.ps1 release",
     "setup-usb": "node -e \"const {execSync} = require('child_process'); try { execSync('adb reverse tcp:8081 tcp:8081', {stdio: 'inherit'}); console.log('✅ USB debugging setup complete!'); } catch(e) { console.error('❌ Failed to setup USB debugging. Make sure your device is connected and ADB is in PATH.'); }\"",
-    "android:usb": "npm run setup-usb && react-native run-android"
+    "android:usb": "npm run setup-usb && react-native run-android",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -23,7 +24,6 @@
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.4",
-    "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.7",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/stack": "^7.6.8",
@@ -45,7 +45,7 @@
     "react-native-keychain": "^10.0.0",
     "react-native-paper": "^5.14.5",
     "react-native-pdf": "^7.0.3",
-    "react-native-reanimated": "^4.2.0",
+    "react-native-reanimated": "^3.19.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0",
@@ -63,9 +63,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "^20.0.0",
-    "@react-native-community/cli-platform-ios": "^20.0.0",
+    "@react-native-community/cli": "^15.0.0",
+    "@react-native-community/cli-platform-android": "^15.0.0",
+    "@react-native-community/cli-platform-ios": "^15.0.0",
     "@react-native/babel-preset": "0.82.1",
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
@@ -73,6 +73,7 @@
     "@types/react": "^19.1.1",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^8.19.0",
+    "patch-package": "^8.0.1",
     "prettier": "2.8.8",
     "react-native-make": "^1.0.1",
     "typescript": "^5.8.3"
